# TransmitHMI

./: LICENSE
lvgl_port/: CMakeLists.txt
lvgl_port/docs/: PortingGuide.md  TestReport.md
lvgl_port/include/: logic.h  ui_signal_panel.h
lvgl_port/src/: logic.c  main.c  ui_signal_panel.c
lvgl_port/tests/: test_logic.c
lvgl_ui/: README.md  backend_integration_example.c  globals.xml  project.xml  ui_binding.c  ui_binding.h  ui_config.c  ui_config.h  ui_controls.c  ui_footer.c  ui_header.c  ui_log_display.c  ui_main.c  ui_main.h  ui_manual_input.c  ui_state.c  ui_state.h
